--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.3
-  css_colors: ^1.0.0
+  cupertino_icons: ^1.0.0
+  badges: ^1.1.4
+
 
 dev_dependencies:
   flutter_test:
@@ -27,3 +28,6 @@ flutter:
     - family: Pacifico
       fonts:
         - asset: fonts/Pacifico-Regular.ttf
+
+  assets:
+    - assets/
